[B]Version 2.0.0[/B]

- Initial commit to Eden add-on system