@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.g4tv"
        name="G4TV"
-       version="2.0.0"
+       version="3.0.1"
        provider-name="stacked">
   <requires>
-    <import addon="xbmc.python" version="2.0"/>
-	<import addon="script.module.parsedom" version="0.9.1"/>
-	<!-- Waiting for dependency to become final
-	<import addon="script.module.simple.downloader" version="0.9.1"/>
-	-->
+    <import addon="xbmc.python" version="2.1.0"/>
+	<import addon="script.module.parsedom" version="1.3.0"/>
+	<import addon="script.module.buggalo" version="1.1.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
         <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-    <summary>G4TV: The latest in video games - game reviews, trailers, news, cheats, and screenshots.</summary>
-    <description>G4TV is the one destination on television that feeds your addiction for the latest must-have tech gadgets, web culture and video games.</description>
+    <summary lang="en">G4TV: The latest in video games - game reviews, trailers, news, cheats, and screenshots.</summary>
+    <description lang="en">G4TV is the one destination on television that feeds your addiction for the latest must-have tech gadgets, web culture and video games.</description>
     <platform>all</platform>
+	<language>en</language>
   </extension>
 </addon>
