@@ -3,9 +3,6 @@
 	<string id="30001">Search Videos...</string>
     <string id="30002">No videos found. Please check your spelling</string>
     <string id="30003">or try again using different search words.</string>
-	<string id="30004">Enable Video Download</string>
-	<string id="30005">Download Location</string>
-	<string id="30008">Show Downloads Folder</string>
     <string id="30009">No videos found. Please check your spelling</string>
     <string id="30010">or try again using different search words.</string>
 	<string id="30011">Most Recent</string>
@@ -15,7 +12,11 @@
 	<string id="30015">Events</string>
 	<string id="30016">Platforms</string>
 	<string id="30017">Genres</string>
-	<string id="30018">Downloads</string>
 	<string id="30019">Next Page</string>
-	<string id="30020">Please set a Download Location.</string>
+	<string id="30050">There was a connection error:</string>
+	<string id="30051">If this problem persists, please submit the error report.</string>
+	<string id="30052">Retry</string>
+	<string id="30053">Quit</string>
+	<string id="30054">There was an index error.</string>
+	<string id="30055">Enable default view for Confluence skin</string>
 </strings>
