@@ -1,0 +1,3 @@
+<settings>
+   <setting id="view" type="bool" label="30055" default="true"/>
+</settings>
